<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/loginFragment"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".landing.login.LoginFragment">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/logo"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="30dp"
        />
    <TextView
        android:id="@+id/account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textSize="14sp"
        android:textColor="@color/black"
        android:layout_marginHorizontal="70dp"
        android:gravity="center"
        android:text="@string/login_up"/>

    <View
        android:id="@+id/view"
        android:layout_width="320dp"
        android:layout_height="320dp"
        android:background="@drawable/bg_grey"
        app:layout_constraintTop_toBottomOf="@id/account"
        android:layout_marginTop="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <com.google.android.material.textfield.TextInputLayout

        android:id="@+id/mail_layout"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginHorizontal="60dp"
        android:textSize="18sp"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:startIconDrawable="@drawable/email"
        app:startIconTint="@color/dark_pink"
        app:layout_constraintCircleRadius="20dp"
        app:layout_constraintTop_toBottomOf="@id/account"
        android:layout_marginTop="55dp"
        android:background="@drawable/login_bg_text">

        <com.google.android.material.textfield.TextInputEditText

            android:id="@+id/mail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/login_bg_text"
            android:hint="@string/enter_email"
            android:inputType="textEmailAddress"
            android:textAllCaps="false"
            android:textColorHint="@color/grey">

        </com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout

        android:id="@+id/password_layout"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginHorizontal="60dp"
        android:textSize="18sp"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:layout_constraintCircleRadius="20dp"
        app:layout_constraintTop_toBottomOf="@id/mail_layout"
        android:layout_marginTop="15dp"
        android:background="@drawable/login_bg_text"
        app:passwordToggleEnabled="true"
        app:startIconTint="@color/dark_pink"

        app:passwordToggleTint="@color/dark_pink">

        <com.google.android.material.textfield.TextInputEditText

            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/login_bg_text"
            android:hint="@string/enter_pass"
            android:inputType="textPassword"
            android:textColorHint="@color/grey"
            app:layout_constraintCircleRadius="10dp">

        </com.google.android.material.textfield.TextInputEditText>

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/dont_have"
        android:layout_width="160dp"
        android:layout_height="20dp"
        app:layout_constraintTop_toBottomOf="@id/password_layout"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="50dp"
        android:text="Don’t have an account? "
        android:textSize="15sp"
        android:textColor="@color/black"
        />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/sign_up_btn"
        android:layout_width="160dp"
        android:layout_height="20dp"
        app:layout_constraintTop_toBottomOf="@id/password_layout"
        app:layout_constraintStart_toEndOf="@id/dont_have"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="30dp"
        android:text="@string/sign_up"
        android:textSize="15sp"
        android:textColor="@color/dark_pink"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/dont_have"
        android:layout_marginHorizontal="70dp"
        android:layout_marginTop="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/login_button"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:background="@drawable/button_bg" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>