<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/settingFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".home.SettingFragment">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_setting" />

    <TextView
        android:id="@+id/tv_setting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Profile Settings"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:gravity="center_horizontal"
        android:layout_margin="20dp"
        app:layout_constraintTop_toTopOf="parent"
        />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cv_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="25dp"
        app:cardBackgroundColor="@color/dark_pink"
        app:cardCornerRadius="15dp"
        app:layout_constraintTop_toBottomOf="@id/logo">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <com.google.android.material.textfield.TextInputLayout

                android:id="@+id/mail_layout"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginHorizontal="15dp"
                android:layout_marginTop="25dp"
                android:textSize="18sp"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp"
                app:layout_constraintTop_toTopOf="parent"
                app:startIconDrawable="@drawable/pencil"
                app:startIconTint="@color/dark_pink">

                <com.google.android.material.textfield.TextInputEditText

                    android:id="@+id/mail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/login_bg_text"
                    android:inputType="textEmailAddress"
                    android:hint="@string/enter_email"
                    android:textAllCaps="false"
                    android:textColorHint="@color/grey">

                </com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout

                android:id="@+id/name_layout"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginHorizontal="15dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/login_bg_text"
                android:textSize="18sp"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp"
                app:layout_constraintCircleRadius="20dp"
                app:layout_constraintTop_toBottomOf="@id/mail_layout"
                app:startIconDrawable="@drawable/pencil"
                app:startIconTint="@color/dark_pink">

                <com.google.android.material.textfield.TextInputEditText

                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/login_bg_text"
                    android:inputType="textEmailAddress"
                    android:hint="@string/enter_name"
                    android:textAllCaps="false"
                    android:textColorHint="@color/grey">

                </com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout

                android:id="@+id/password_layout"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginHorizontal="15dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/login_bg_text"
                android:textSize="18sp"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp"
                app:layout_constraintCircleRadius="20dp"
                app:passwordToggleEnabled="true"
                app:layout_constraintTop_toBottomOf="@id/name_layout"
                app:startIconDrawable="@drawable/pencil"
                app:startIconTint="@color/dark_pink">

                <com.google.android.material.textfield.TextInputEditText

                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/login_bg_text"
                    android:inputType="textPassword"
                    android:hint="@string/enter_pass"
                    android:textAllCaps="false"
                    android:textColorHint="@color/black">

                </com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/change"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="40dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/button_bg"
                android:text="Change"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/password_layout" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_save"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="40dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/button_bg"
                android:text="Save"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:layout_marginBottom="30dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/change" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:layout_marginBottom="40dp"
        android:background="@drawable/button_bg"
        android:text="Log Out"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@id/cv_top"
        app:layout_constraintStart_toStartOf="@id/cv_top"
        app:layout_constraintBottom_toBottomOf="parent" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>